--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image to AWS ECR
+name: Build and Push Image
 
 on:
   push:
@@ -22,8 +22,8 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       # Step 3: Log in to AWS ECR
       - name: Log in to Amazon ECR
@@ -33,13 +33,18 @@ jobs:
       # Step 4: Build the Docker image
       - name: Build the Docker image
         run: |
-          IMAGE_TAG=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-app:latest
-          docker build -t $IMAGE_TAG .
+          docker build -t nginx-web-app . -f Dockerfile.early
 
-      # Step 5: Push the Docker image to ECR
+      # Step 5: Build the Docker image
+      - name: Tag image
+        run: |
+          IMAGE_TAG=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/nginx-web-app:latest
+          docker tag nginx-web-app:latest $IMAGE_TAG
+
+      # Step 6: Push the Docker image to ECR
       - name: Push Docker image to Amazon ECR
         run: |
-          IMAGE_TAG=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-app:latest
+          IMAGE_TAG=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/nginx-web-app:latest
           docker push $IMAGE_TAG
 
       # Optionally Step 6: Trigger AWS App Runner deployment (if needed)
