--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,8 +9,7 @@
 		"ghcr.io/devcontainers-extra/features/npm-package:1": {},
 		"ghcr.io/devcontainers-community/npm-features/prettier:1": {}
 	},
-	"postCreateCommand": "sudo /workspaces/josephbaruch.com/setup_k3d.sh", 
-	"forwardPorts": [9900, 9090, 8080]
-
-
+	"forwardPorts": [
+		8080
+	]
 }
