--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Tag image
         run: |
           IMAGE_TAG=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/josephbaruch.com:latest
-          docker tag nginx-web-app:latest $IMAGE_TAG
+          docker tag josephbaruch.com:latest $IMAGE_TAG
 
       # Step 6: Push the Docker image to ECR
       - name: Push Docker image to Amazon ECR
