--- a/ServerHosting/deployment.yaml
+++ b/ServerHosting/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: josephbaruch-container
-        image: 123456789012.dkr.ecr.us-west-2.amazonaws.com/josephbaruch.com:latest
+        image: localhost:5000/josephbaruch.com:latest
         ports:
         - containerPort: 8084
